--- a/Repository pattern.csproj
+++ b/Repository pattern.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Repository_pattern</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+  </ItemGroup>
+
 </Project>
